# git-warp-time

./: .editorconfig  .gitignore  .rustfmt.toml  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  Makefile.am  README.md  REUSE.toml  action.yml  bootstrap.sh  build.rs  configure.ac  default.nix  deny.toml  flake.nix
.cargo/: config.toml
.github/workflows/: deploy.yml  nix.yml  release.yml  rust_bloat.yml  rust_lint.yml  rust_test.yml  versioning.yml
build-aux/: ax_docker_boilerplate.m4  ax_rust_boilerplate.m4  build.rs  dist_checksums.mk  docker_boilerplate.mk.in  que.just  que_dist_checksums.am  que_docker_boilerplate.m4  que_git_version.m4  que_rust_boilerplate.am  que_rust_boilerplate.just  que_rust_boilerplate.m4  rust_boilerplate.am.in  rust_boilerplate.mk.in
hooks/: build
src/: cli.rs  lib.rs
