[package]
name = "git-warp-time"
version = "0.7.7"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
edition = "2021"
rust-version = "1.74.0"
description = "Rust library and CLI utility to reset file timestamps to repo state"
readme = "README.md"
homepage = "https://github.com/alerque/git-warp-time"
repository = "https://github.com/alerque/git-warp-time"
license = "GPL-3.0-only"
build = "build-aux/build.rs"
include = ["*.rs"]

[[bin]]
name = "git-warp-time"
required-features = ["cli"]

[features]
default = ["cli", "bash", "elvish", "fish", "manpage", "powershell", "zsh"]
completions = ["cli", "clap_complete"]
cli = ["clap"]
bash = ["completions"]
elvish = ["completions"]
fish = ["completions"]
manpage = ["clap_mangen"]
powershell = ["completions"]
zsh = ["completions"]

[profile.release]
lto = true

[dependencies]
filetime = "0.2"

  [dependencies.clap]
  version = "4.5"
  optional = true
  features = [ "derive", "wrap_help" ]

  [dependencies.git2]
  version = "0.18"
  default-features = false

[build-dependencies]

  [build-dependencies.clap_complete]
  version = "4.5"
  optional = true

  [build-dependencies.clap_mangen]
  version = "0.2"
  optional = true

  [build-dependencies.clap]
  version = "4.5"
  optional = true
  features = [ "derive" ]

  [build-dependencies.vergen-gix]
  version = "1.0"
  default-features = false
  features = [ "build", "cargo", "rustc" ]
